@@ -8,10 +8,10 @@ pkt_dts=0
 pkt_dts_time=0.000000
 best_effort_timestamp=0
 best_effort_timestamp_time=0.000000
-pkt_duration=1
-pkt_duration_time=0.040000
-duration=1
-duration_time=0.040000
+pkt_duration=100
+pkt_duration_time=0.100000
+duration=100
+duration_time=0.100000
 pkt_pos=0
 pkt_size=39276
 width=400
